@@ -21,11 +21,11 @@ plugins {
   id 'idea'
   id 'pmd'
   id 'jacoco'
-  id 'org.owasp.dependencycheck' version '8.0.2'
+  id 'org.owasp.dependencycheck' version '8.1.2'
   id 'org.sonarqube' version '4.0.0.2929'
-  id 'io.spring.dependency-management' version '1.0.13.RELEASE'
+  id 'io.spring.dependency-management' version '1.1.0'
   id 'org.springframework.boot' version '2.7.5'
-  id 'com.github.ben-manes.versions' version '0.41.0'
+  id 'com.github.ben-manes.versions' version '0.46.0'
   id 'hmcts.ccd.sdk'  version '5.3.0'
   id 'com.github.hmcts.rse-cft-lib' version '0.19.592'
 }
@@ -96,6 +96,7 @@ configurations {
   e2eTestsRuntime.extendsFrom testRuntime
 }
 
+
 tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
@@ -143,7 +144,7 @@ task e2eTests(type: Test) {
     // Configuration parameters to execute top-level classes in parallel but methods in same thread
     'junit.jupiter.execution.parallel.enabled': 'true',
     'junit.jupiter.execution.parallel.mode.default': 'same_thread',
-    'junit.jupiter.execution.parallel.mode.classes.default': 'concurrent',
+    'junit.jupiter.execution.parallel.mode.classes.default': 'concurrent'
   ])
   environment 'PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD', '1'
   environment 'BASE_URL', 'https://manage-case.aat.platform.hmcts.net'
@@ -171,6 +172,13 @@ task highLevelDataSetup(type: JavaExec) {
   jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
+}
 checkstyle {
   maxWarnings = 0
   toolVersion = '9.2.1'
@@ -252,6 +260,7 @@ dependencyManagement {
     dependencySet(group: 'com.google.guava', version: '31.1-jre') {
       entry 'guava'
     }
+
     //CVE-2022-31692, CVE-2022-31690
     dependencySet( group: 'org.springframework.security', version: '5.7.5'){
       entry 'spring-security-core'
@@ -324,13 +333,13 @@ dependencies {
   implementation group: 'com.github.hmcts', name:'ccd-case-document-am-client', version: '1.59'
   implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '2.1.1'
   implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
-  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.10'
+  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.16'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.3'
-  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.2'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.19.0'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.19.0'
+  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.3'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.20.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.20.0'
   implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.69'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.5'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.7'
   implementation group: 'org.elasticsearch', name: 'elasticsearch'
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
@@ -342,11 +351,12 @@ dependencies {
   implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.0'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.4'
-  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.19.0-RELEASE'
+  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.19.1-RELEASE'
   implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.0.5'
   implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
 
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
@@ -358,19 +368,18 @@ dependencies {
     exclude(module: 'commons-logging')
     exclude(module: 'android-json')
   }
-
   testImplementation group: 'com.jayway.awaitility', name: 'awaitility', version: '1.7.0'
   testImplementation group: 'com.github.stefanbirkner', name: 'system-lambda', version: '1.2.1'
-  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
-  testImplementation group: 'org.assertj', name: 'assertj-guava', version: '3.5.0'
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
+  testImplementation group: 'org.assertj', name: 'assertj-guava', version: '3.24.2'
   testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.4'
   testImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.1.1'
-  testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '11.10'
+  testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '12.2'
   testImplementation group: 'io.rest-assured', name: 'rest-assured'
   testImplementation group: 'org.simplify4u', name: 'slf4j-mock', version: '2.3.0'
   testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.27'
-  testImplementation group: 'com.microsoft.playwright', name: 'playwright', version: '1.30.0'
+  testImplementation group: 'com.microsoft.playwright', name: 'playwright', version: '1.31.0'
 
   testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   integrationTestImplementation sourceSets.main.runtimeClasspath
@@ -383,11 +392,11 @@ dependencies {
   e2eTestsImplementation sourceSets.test.runtimeClasspath
 
   functionalTestImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
-  functionalTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '4.0.2'
+  functionalTestImplementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.0.0'
 
   // Provides fast-reload of just the sptribs service.
   cftlibImplementation 'org.springframework.boot:spring-boot-devtools'
-  cftlibTestImplementation 'com.microsoft.playwright:playwright:1.30.0'
+  cftlibTestImplementation 'com.microsoft.playwright:playwright:1.31.0'
   cftlibTestImplementation 'org.junit-pioneer:junit-pioneer:1.9.1'
 }
 
@@ -520,10 +529,6 @@ cftlibTest {
   environment 'DATA_STORE_S2S_AUTHORISED_SERVICES', 'ccd_gw,fpl_case_service,ccd_data,ccd_ps,sptribs_frontend,payment-api,xui_webapp,sptribs_case_api,ccd_case_document_am_api,am_role_assignment_service'
 }
 
-tasks.withType(Test).configureEach {
-  maxParallelForks = Math.min(Runtime.runtime.availableProcessors().intdiv(2), 4) ?: 1
-}
-
 // exclude the logback binding is coming in via cftlib
 configurations.cftlibTestImplementation {
   exclude group: 'ch.qos.logback', module: 'logback-classic'
@@ -538,6 +543,14 @@ task installChromium(type: JavaExec) {
 }
 
 tasks.cftlibTest.dependsOn(installChromium)
+
+task installBrowser(type: JavaExec) {
+  classpath = sourceSets.e2eTests.runtimeClasspath
+  main = 'com.microsoft.playwright.CLI'
+  args = ['install', 'chromium']
+}
+
+tasks.e2eTests.dependsOn(installBrowser)
 
 tasks.withType(Test).configureEach {
   maxParallelForks = Math.min(Runtime.runtime.availableProcessors().intdiv(2), 4) ?: 1
